# Ubuntu16_Environment

./: README.md
docker/: BuildRun.sh  Dockerfile  Dockerfile-cpp  Dockerfile-py3_5  auto_import.ipy  jupyter_notebook_config.py
samples/: CppSample.sh  KerasSample.py  OpencvSample.py
samples/BoostSample_cpp/: CMakeLists.txt  main.cpp
samples/OpencvSample_cpp/: CMakeLists.txt  main.cpp
